[package]
name = "rusty_paint"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "natural media (rusty) painting application"

[dependencies]
winit_input_helper = "0.12.0"
winit = "0.26.0"
wgpu = "0.12.0"
futures = "0.3.16"
rand = "0.8.4"
bytemuck = { version = "1.4", features = [ "derive" ] }
env_logger = "0.9"
log = "0.4"
