[package]
name = "rusty_paint"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "natural media (rusty) painting application"
default-run = "winit"

[dependencies]
wgpu = "0.12.0"
futures = "0.3.16"
bytemuck = { version = "1.4", features = [ "derive" ] }
winit_input_helper = { version="0.12.0", optional = true }
winit = { version="0.26.0", optional = true }
env_logger = { version = "0.9", optional = true }

[[bin]]
name = "winit"
required-features = ["winit"]

[features]
default = ["winit"]
winit = ["dep:winit", "dep:winit_input_helper", "dep:env_logger" ]
