[package]
name = "rusty_paint"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "natural media (rusty) painting application"
default-run = "winit"

[dependencies]
wgpu = "0.15.0"
futures = "0.3.16"
bytemuck = { version = "1.4", features = [ "derive" ] }
winit_input_helper = { version="0.14.0", optional = true }
winit = { version="0.28.0", optional = true }
env_logger = { version = "0.9", optional = true }
yew = { version = "0.20", features = ["csr"], optional = true }

[[bin]]
name = "winit"
required-features = ["gui"]

[[bin]]
name = "web"
required-features = ["webui"]

[features]
default = ["gui"]
gui = ["dep:winit", "dep:winit_input_helper", "dep:env_logger"]
webui = ["dep:yew", "wgpu/webgl"]
